# serena

./: CHANGELOG.md  CLAUDE.md  DOCKER.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: docker.yml  pytest.yml
docs/: _config.yml
docs/01-about/: 020_programming-languages.md
docs/02-usage/: 020_running.md  025_jetbrains_plugin.md  030_clients.md  040_workflow.md  050_configuration.md
docs/03-special-guides/: groovy_setup_guide_for_serena.md
resources/: jetbrains-marketplace-button.cdr
src/serena/: agent.py  cli.py  code_editor.py  constants.py  dashboard.py  ls_manager.py  mcp.py  project.py  symbol.py
src/serena/config/: context_mode.py  serena_config.py
src/serena/resources/: serena_config.template.yml
src/serena/tools/: config_tools.py  file_tools.py  jetbrains_plugin_client.py  jetbrains_tools.py  symbol_tools.py  tools_base.py  workflow_tools.py
src/serena/util/: general.py  gui.py  inspection.py
src/solidlsp/: ls.py  ls_config.py  ls_types.py
src/solidlsp/language_servers/: csharp_language_server.py  fsharp_language_server.py  groovy_language_server.py  kotlin_language_server.py  powershell_language_server.py  scala_language_server.py  taplo_server.py  typescript_language_server.py  vue_language_server.py
src/solidlsp/lsp_protocol_handler/: server.py
test/: conftest.py
test/resources/repos/toml/test_repo/: Cargo.toml  config.toml  pyproject.toml
test/serena/: test_cli_project_commands.py  test_get_diagnostics_tool.py  test_get_diagnostics_tool_go_integration.py  test_serena_agent.py  test_symbol_editing.py
(+60 files in other folders)
